Update docs link

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Mobot</string>
 
-    <string name="mobot_website">"https://mobotx.github.io"</string>
+    <string name="mobot_docs">"https://github.com/mobotx/mobot"</string>
 
     <string name="status_disconnecting">Disconnecting...</string>
     <string name="status_disconnected">Disconnected!</string>
@@ -13,7 +13,6 @@
 
     <string name="face_hz">5.0</string>
     <string name="face_text_asleep">Connect to Wake up Mobot!</string>
-    <string name="face_text_awake">Connect chassis to make\nMobot Happy!</string>
     <string name="face_text_happy">Lets Play!</string>
     <string name="face_text_lost">Lost connection with server!</string>
 
